# dlt-etl-lambda

./: .gitignore  README.md  app.py  pyproject.toml
ETL/: etl.py
lambda/: Dockerfile  extract_load_lambda.py  requirements.txt
stacks/: dlt_stacks.py
